# bfdev

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  README  README.md  build.cmake  build.sh
.github/: gen-crc.c
.github/workflows/: cmake.yml  codeql.yml  macos.yml  ubuntu-clang.yml  ubuntu-gcc.yml  ubuntu.yml  windows.yml
arch/dummy/: build.cmake
arch/generic/: build.cmake
cmake/: DebPackageConfig.cmake  FindSphinx.cmake  bfdev-config.cmake.in  bfdev.cmake.in  config.h.in  package-deb.descript
docs/: commits.md  components.md  index.rst
examples/: .gitignore  CMakeLists.txt  list-benchmark.c  list-selftest.c  rbtree-benchmark.c  rbtree-selftest.c  rbtree-simple.c  skiplist-selftest.c  time.h
examples/action/: .gitignore  CMakeLists.txt  simple.c
examples/allocator/: .gitignore  CMakeLists.txt  simple.c
examples/arc4/: .gitignore  CMakeLists.txt  bandwidth.c
examples/array/: .gitignore  CMakeLists.txt  simple.c
examples/ascii85/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/base32/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/base64/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/bfdev/: .gitignore  CMakeLists.txt  version.c
examples/bloom/: .gitignore  CMakeLists.txt  simple.c
examples/btree/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c
examples/cache/: .gitignore  CMakeLists.txt  simple.c
examples/circle/: .gitignore  CMakeLists.txt  atomic.c  simple.c
examples/crc/: .gitignore  CMakeLists.txt  bandwidth.c
examples/crypto/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/fifo/: .gitignore  CMakeLists.txt  atomic.c  selftest.c  simple.c
examples/fsm/: .gitignore  CMakeLists.txt  console.c  simple.c
examples/guards/: .gitignore  CMakeLists.txt  cleanup.c
examples/hashmap/: .gitignore  CMakeLists.txt  benchmark.c  simple.c
examples/hashtbl/: .gitignore  CMakeLists.txt  simple.c
examples/heap/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c
examples/hlist/: .gitignore  CMakeLists.txt  selftest.c  simple.c
examples/ilist/: .gitignore  CMakeLists.txt  selftest.c
examples/json/: .gitignore  CMakeLists.txt  selftest.c
examples/levenshtein/: .gitignore  CMakeLists.txt  simple.c
examples/list/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c
examples/log/: .gitignore  CMakeLists.txt  demo_log.c  simple.c
examples/log2/: .gitignore  CMakeLists.txt  selftest.c
examples/matrix/: .gitignore  CMakeLists.txt  benchmark.c  fibonacci.c
examples/minpool/: .gitignore  CMakeLists.txt  selftest.c
examples/mpi/: .gitignore  CMakeLists.txt  bbp.c  fibonacci.c  helper.h  machin.c  marchin.c  pi.c
examples/notifier/: .gitignore  CMakeLists.txt  simple.c
examples/once/: .gitignore  CMakeLists.txt  simple.c
examples/prandom/: .gitignore  CMakeLists.txt  simple.c
examples/radix/: .gitignore  CMakeLists.txt  benchmark.c  simple.c
examples/ratelimit/: .gitignore  CMakeLists.txt  simple.c
examples/rbtree/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c  simple.c
examples/respool/: .gitignore  CMakeLists.txt  simple.c
examples/ringbuf/: .gitignore  CMakeLists.txt  simple.c
examples/segtree/: .gitignore  CMakeLists.txt  selftest.c
examples/sha/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/sha1/: .gitignore  CMakeLists.txt  bandwidth.c  utils.c
examples/skiplist/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c
examples/slist/: .gitignore  CMakeLists.txt  selftest.c  simple.c
examples/sort/: .gitignore  CMakeLists.txt  benchmark.c  selftest.c
examples/textsearch/: .gitignore  CMakeLists.txt  simple.c
examples/tokenbucket/: .gitignore  CMakeLists.txt  simple.c
examples/unaligned/: CMakeLists.txt
include/: base.h  bfdev.h  callback.h  export.h  list.h  textsearch.h
include/bfdev/: action.h  align.h  alloca.h  allocator.h  allocpool.h  arc4.h  argv.h  array.h  ascii.h  ascii85.h  atomic.h  attributes.h  base32.h  base64.h  bcd.h  bfdev.h  bintree.h  bitfield.h  bitflags.h  bitmap-comp.h  bitmap.h  bitops-endian.h  bitops.h  bitrev.h  bits.h  bitsperlong.h  bitwalk-comp.h  bitwalk.h  bloom.h  bsearch.h  btree.h  bug.h  byteorder.h  cache.h  callback.h  cdefs.h  circle.h  cmpxchg.h  compiler.h  const.h  (+79 more)
include/bfdev/asm-generic/: atomic.h  bitops.h  bitsperlong.h  builtin-clz.h  builtin-ctz.h  (+11 more)
include/port/: allocator.h  log.h
scripts/: .gitignore  CMakeLists.txt  asm-generic.cmake  commit.cmake  gen-crc.c  gen-crc16.c  gen-crc16be.c  gen-crc32.c  gen-crc32be.c  gen-crc64.c  gen-crc64be.c  gen-crc8.c  hostrule.cmake  packed-header.cmake  packed-source.cmake  sanitize.cmake
src/: allocator.c  allocpool.c  argv.c  array.c  bcd.c  bintree-debug.c  bintree.c  bitmap.c  bitrev.c  bitwalk.c  bloom.c  branch.c  bsearch.c  btree-utils.c  btree.c  build.cmake  callback.c  dword.c  errname.c  fifo.c  fsm.c  gallocator.c  hashmap.c  heap-debug.c  heap.c  hlist-debug.c  ilist.c  jhash.c  json.c  levenshtein.c  list-check.c  list-debug.c  list-sort.c  llist.c  log.c  lru.c  matrix.c  memalloc.c  mfp.c  minpool.c  (+19 more)
src/cache/: build.cmake  cache.c  lfu.c  lru.c
src/crypto/: arc4.c  ascii85.c  base32.c  base64.c  build.cmake  crc-ccitt.c  crc-ccittf.c  crc-itut.c  crc-rocksoft.c  crc-t10dif.c  crc16.c  crc32.c  crc4.c  crc64.c  crc7.c  crc8.c  md5.c  sha1.c  sha2.c
src/libc/: build.cmake  ctype.c  strdup.c  string.c  vxprintf.c
src/log/: build.cmake  color.c  level.c  log.c
src/textsearch/: bm.c  build.cmake  kmp.c  linear.c  sunday.c  textsearch.c
testsuite/: CMakeLists.txt  build.cmake  randpool.h  robustness.h  testsuite.c  testsuite.cmake  testsuite.h
testsuite/array/: .gitignore  CMakeLists.txt  fuzzy.c
testsuite/bitwalk/: .gitignore  CMakeLists.txt  fuzzy.c
testsuite/fifo/: .gitignore  CMakeLists.txt  selftest.c
testsuite/hlist/: .gitignore  CMakeLists.txt  iterator.c
testsuite/list/: .gitignore  CMakeLists.txt  iterator.c
testsuite/memalloc/: .gitignore  CMakeLists.txt  fuzzy.c
testsuite/mpi/: .gitignore  CMakeLists.txt  empty.c  fuzzy.c
testsuite/slist/: .gitignore  CMakeLists.txt  iterator.c
(+47 files in other folders)
