# SPDX-License-Identifier: GPL-2.0-or-later
#
# Copyright(c) 2023 ffashion <helloworldffashion@gmail.com>
#

add_subdirectory(fifo)
add_subdirectory(hlist)
add_subdirectory(levenshtein)
add_subdirectory(list)
add_subdirectory(rbtree)
add_subdirectory(ringbuf)
add_subdirectory(segtree)
add_subdirectory(skiplist)
add_subdirectory(slist)
