# SPDX-License-Identifier: GPL-2.0-or-later
#
# Copyright(c) 2023 ffashion <helloworldffashion@gmail.com>
#

add_subdirectory(bloom)
add_subdirectory(btree)
add_subdirectory(fifo)
add_subdirectory(hashmap)
add_subdirectory(hashtbl)
add_subdirectory(heap)
add_subdirectory(hlist)
add_subdirectory(ilist)
add_subdirectory(levenshtein)
add_subdirectory(list)
add_subdirectory(log2)
add_subdirectory(rbtree)
add_subdirectory(ringbuf)
add_subdirectory(segtree)
add_subdirectory(skiplist)
add_subdirectory(slist)
