# SPDX-License-Identifier: GPL-2.0-or-later
#
# Copyright(c) 2023 ffashion <helloworldffashion@gmail.com>
#

add_subdirectory(action)
add_subdirectory(allocator)
add_subdirectory(arc4)
add_subdirectory(array)
add_subdirectory(ascii85)
add_subdirectory(base32)
add_subdirectory(base64)
add_subdirectory(bfdev)
add_subdirectory(bloom)
add_subdirectory(btree)
add_subdirectory(cache)
add_subdirectory(circle)
add_subdirectory(crc)
add_subdirectory(fifo)
add_subdirectory(fsm)
add_subdirectory(guards)
add_subdirectory(hashmap)
add_subdirectory(hashtbl)
add_subdirectory(heap)
add_subdirectory(hlist)
add_subdirectory(ilist)
add_subdirectory(levenshtein)
add_subdirectory(list)
add_subdirectory(log)
add_subdirectory(log2)
add_subdirectory(matrix)
add_subdirectory(mpi)
add_subdirectory(notifier)
add_subdirectory(once)
add_subdirectory(prandom)
add_subdirectory(radix)
add_subdirectory(rbtree)
add_subdirectory(respool)
add_subdirectory(ringbuf)
add_subdirectory(segtree)
add_subdirectory(sha1)
add_subdirectory(skiplist)
add_subdirectory(slist)
add_subdirectory(sort)
add_subdirectory(textsearch)
